# Standalone subproject — not a member of the BYOVD workspace.
# Build directly from this directory with `cargo build --release`.
[workspace]

[package]
name = "Astra64-RW"
version = "0.1.0"
edition = "2021"

[dependencies]
windows = { version = "0.61", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_Storage_FileSystem",
    "Win32_System_IO",
    "Win32_System_Memory",
    "Win32_System_Threading",
    "Win32_System_LibraryLoader",
    "Win32_System_ProcessStatus",
    "Win32_System_Services",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_SystemInformation",
] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
